--- a/docstrings/numerical_simulation/environment_setup/ephemeris.yaml
+++ b/docstrings/numerical_simulation/environment_setup/ephemeris.yaml
@@ -2,9 +2,9 @@
 ################## Ephemeris Setup ( approximatePlanetPositionsBase.h, createEphemeris.h ) ##########################
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-description: "None"
-notes: "None"
-
+extended_summary: |
+  This module consists of factory functions for setting up the
+  ephemeris models of celestial bodies in an environment.
 
 
 classes:
