--- a/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
+++ b/docstrings/numerical_simulation/environment_setup/atmosphere.yaml
@@ -2,9 +2,9 @@
 ##################               Atmosphere Setup ( createAtmopshereModel.h )              ##########################
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-description: "None"
-notes: "None"
-
+extended_summary: |
+  This module consists of factory functions for setting up the
+  atmosphere models of celestial bodies in an environment.
 
 
 classes:
