--- a/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
+++ b/docstrings/numerical_simulation/environment_setup/radiation_pressure.yaml
@@ -2,9 +2,9 @@
 #################            Radiation Pressure Setup ( createBodyShapeModel.h )               ######################
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-description: "None"
-notes: "None"
-
+extended_summary: |
+  This module consists of factory functions for setting up the
+  radiation pressure models of celestial bodies in an environment.
 
 
 classes:
