--- a/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
+++ b/docstrings/numerical_simulation/environment_setup/rotation_model.yaml
@@ -2,8 +2,9 @@
 ################## Rotation Model Setup ( createRotationalModel.h ) #################################################
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-description: "None"
-notes: "None"
+extended_summary: |
+  This module consists of factory functions for setting up the
+  rotation models of celestial bodies in an environment.
 
 
 
