--- a/docstrings/numerical_simulation/environment_setup/shape.yaml
+++ b/docstrings/numerical_simulation/environment_setup/shape.yaml
@@ -2,9 +2,9 @@
 ##################                   Shape Setup ( createBodyShapeModel.h )                 #########################
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-description: "None"
-notes: "None"
-
+extended_summary: |
+  This module consists of factory functions for setting up the
+  shape models of celestial bodies in an environment.
 
 
 classes:
