--- a/docstrings/numerical_simulation/propagation_setup/__package__.yaml
+++ b/docstrings/numerical_simulation/propagation_setup/__package__.yaml
@@ -1,4 +1,6 @@
-description: "None."
+extended_summary: |
+  This module consists of factory functions for setting up the
+  propagation component of a simulation.
 
 modules:
   - acceleration
