Small update to frame conversions

--- a/docstrings/astro/frame_conversion.yaml
+++ b/docstrings/astro/frame_conversion.yaml
@@ -18,15 +18,20 @@ notes: |
   - All reference frames used should be assumed as right handed:
     :math:`\mathbf{X}\times\mathbf{Y}=\mathbf{Z}`.
 
-  - Intertial reference frames are:
+  - We distinguish between two different uses of the term 'inertial:
 
-    * non-rotating with respect to the stars
-    * have non non-accelerating origins (velocity is typically
-      non-zero, but acceleration is neglible).
+    * An *inertial origin*: the frame has a non-accelerating origin. On solar
+      system scales, the solar system barycenter (SSB) is considered to be 
+      the only inertial origin.
+    * An *inertial orientation*: the unit axes of the frame are non-rotating
+      with respect to the celestial background. This module is concerned 
+      primarily with conversions between different orientations.
 
-  - Examples of inertial reference frames include J2000 (a.k.a EME2000
-    and is made to be approximately equal to the ICRF within 0.1 arc
-    seconds). Inherited from SPICE, J2000 is considered the same as ICRF.
+  - Examples of and inertial origin include J2000 (a.k.a EME2000), as well
+    as the SPICE-defined ECLIPJ2000 frame (see ` this description<https://tudat-space.readthedocs.io/en/latest/_src_user_guide/environment_setup/use_of_reference_frames.html#predefined-orientations>`_
+    on our user guide. The use of the ICRF frame (different from J2000 for
+    <0.1 arcseconds) in Tudat is presently limited to the :ref:`\`\`numerical_simulation\`\``
+    model, see :func:`~tudatpy.numerical_simulation.environment_setup.rotation_model.gcrs_to_itrs`.
 
   .. raw:: html
 
